# embed-this

./: README.md  embed-this.cabal
app/: Main.hs
src/Web/: EmbedThis.hs
src/Web/EmbedThis/: DataParser.hs  Service.hs  ServiceConfig.hs  UrlParser.hs
src/Web/EmbedThis/DataParser/: Class.hs  Twitter.hs
