name:                embed-this
version:             0.1.0.0
synopsis:            Embed social media posts, but nicely
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Geoffrey Roberts
maintainer:          g.roberts@blackicemedia.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.EmbedThis
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , http-types
                     , network-uri
                     , safe
                     , text
                     , unordered-containers
                     , wreq
  default-language:    Haskell2010

executable new-template-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , embed-this
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , embed-this
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
